--- a/e1/index.html
+++ b/e1/index.html
@@ -5,6 +5,66 @@
     <title>Exercise 1</title>
   </head>
   <body>
-    <!-- content goes here -->
+    <h1>E1: 20 Questions</h1>
+    <h2>Question 1</h2>
+    <p>Q: What is the best food for a hot summer day?</p>
+    <p>A: </p>
+    <h2>Question 2</h2>
+    <p>Q: When is a normal time for you to go to sleep?</p>
+    <p>A: </p>
+    <h2>Question 3</h2>
+    <p>Q: What is your favorite bird?</p>
+    <p>A: </p>
+    <h2>Question 4</h2>
+    <p>Q: How do you pronounce .gif (the file format)?</p>
+    <p>A: </p>
+    <h2>Question 5</h2>
+    <p>Q: Does it truly matter one way or the other how someone pronounces it?</p>
+    <p>A: </p>
+    <h2>Question 6</h2>
+    <p>Q: What's the weirdest dish you have ever tried?</p>
+    <p>A: </p>
+    <h2>Question 7</h2>
+    <p>Q: Which text editor program should we be using for the first exercise?</p>
+    <p>A: </p>
+    <h2>Question 8</h2>
+    <p>Q: What's your morning routine?</p>
+    <p>A: </p>
+    <h2>Question 9</h2>
+    <p>Q: Any podcast recommendations?</p>
+    <p>A: </p>
+    <h2>Question 10</h2>
+    <p>Q: What's your major?</p>
+    <p>A: </p>
+    <h2>Question 11</h2>
+    <p>Q: Do you have any pets?</p>
+    <p>A: </p>
+    <h2>Question 12</h2>
+    <p>Q: What is your current favorite music album to listen to?</p>
+    <p>A: </p>
+    <h2>Question 13</h2>
+    <p>Q: Who is your favorite graphic designer?</p>
+    <p>A: </p>
+    <h2>Question 14</h2>
+    <p>Q: Favorite music artist/band?</p>
+    <p>A: </p>
+    <h2>Question 15</h2>
+    <p>Q: Favorite thing to do in quarantine?</p>
+    <p>A: </p>
+    <h2>Question 16</h2>
+    <p>Q: What's your favorite dessert?</p>
+    <p>A: </p>
+    <h2>Question 17</h2>
+    <p>Q: What is your favorite horror movie?</p>
+    <p>A: </p>
+    <h2>Question 18</h2>
+    <p>Q: If you had to pick a superpower what would it be and why?</p>
+    <p>A: </p>
+    <h2>Question 19</h2>
+    <p>Q: Who’s your favorite character from a book, show, game, etc?</p>
+    <p>A: </p>
+    <h2>Question 20</h2>
+    <p>Q: Is if there is any type of specific art you like?</p>
+    <p>A: </p>
   </body>
 </html>
