--- a/e4/index.html
+++ b/e4/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>E4</title>
+    <title>E1</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="interior">
     <main class="exercise">
       <h1>Exercise 4</h1>
       <p>My site's URL is <a href="https://www.google.com/">www.google.com</a>. Site's intended audience is people who want to find something. Site's primary action for the user to search for something.
