--- a/e5/index.html
+++ b/e5/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>E5</title>
+    <title>E1</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="interior">
     <main class="exercise">
       <h1>Exercise 5</h1>
       <h3>Desktop Wireframe</h3>
