--- a/e1/index.html
+++ b/e1/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>E1</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="interior">
     <main class="exercise">
       <h1>E1: 20 Questions</h1>
       <h2>Question 1</h2>
