--- a/e7/index.html
+++ b/e7/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- added main element to contain all content so that I can add some layout styles (width/margin/padding/etc.) to the main element instead of the body. It is a bad habit to get in adding layout styles to the body. -->
     <main>
       <h1>Seven Principles of Typographic Contrast</h1>
       <p class="intro">In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
