--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <li><a href="e3/index.html">E3: Organization and Naming</a></li>
       <li><a href="e4/index.html">E4: Site Map</a></li>
       <li><a href="e5/index.html">E5: Wireframes</a></li>
+      <li>E6: Type on Screen I</li>
+      <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
     </ul>
   </body>
 </html>
