--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Michael McDermott</title>
+    <title>Example Repository</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Sample Work</h1>
+    <h1>Example Work</h1>
     <ul>
       <li><a href="e1/index.html">E1: 20 Questions</a></li>
       <li><a href="e2/index.html">E2: Make the Grid</a></li>
