--- a/e7/index.html
+++ b/e7/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- title for browser tab -->
     <title>E7</title>
     <!-- google font link -->
     <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap" rel="stylesheet">
@@ -13,19 +14,29 @@
   <body>
     <!-- added main element to contain all content so that I can add some layout styles (width/margin/padding/etc.) to the main element instead of the body. It is a bad habit to get in adding layout styles to the body. -->
     <main>
+      <!-- used an h1 element because this is my main heading for the page -->
       <h1>Seven Principles of Typographic Contrast</h1>
+      <!-- used a paragraph element here instead of a heading element because this feels more like a paragraph that might be styled differently than an actual heading. So I added a class to style the paragraph differently than the other paragraphs. -->
       <p class="intro">In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
+      <!-- This to me is not quite as important of a bit of text so I went with an h5 element. I also gave it a class which at the end was unnecessary because I have no other h5 elements so I could have just styled the h5 -->
       <h5 class="author">Written by John D. Berry</h5>
+      <!-- paragraphs get the paragraph element. You will also see things that start with an ampersand and then end with a semicolon. Those are the character escapes that we talked about. I used them to change default " (prime marks) to smart quotes (curly quotes?), I changed the -- to em dashes, and single prime marks (') to curly single quotes. -->
       <p>The late Canadian typographer Carl Dair was one of the great typographic designers of the 1950s and 1960s, and he may have been the best of them all at explaining the nature of typography. In coordinated projects that he both wrote and designed, he managed to describe &mdash; and show &mdash; the ways in which manipulating and using type make typography happen.</p>
       <p>Dair is the very epitome of what I mean when I say &ldquo;typographer&rdquo;: someone who designs with type, not just a fancy typesetter, but someone who uses type, in all its variations, as the principle element of design. Since type carries meaning, the practice of typography requires a designer who cares about the words themselves. It requires someone who cares enough, and is skillful enough, to make the type express that meaning, rather than serve as simply eye-catching decoration.</p>
+      <!-- in this paragraph and a few others I used the cite element. The cite element is an inline element that can be used to mark titles of works -->
       <p>Carl Dair&rsquo;s book <cite>Design With Type</cite> (originally published in 1952; revised and expanded in 1967) is deservedly still in print, even though the technology that he used and described has long been outdated. The practicalities of setting type in metal are no longer the practicalities we have to deal with; but the visual relationships between letters, which Dair showed and explained so graphically in his book, haven&rsquo;t changed at all. <cite>Design With Type</cite> is still one of the best handbooks available for learning how to do exactly what the title says: design with type.</p>
       <p>At around the same time he was revising his book, Carl Dair was producing a series of six pamphlets for West Virginia Pulp and Paper (Westvaco), which he called &ldquo;A Typographic Quest.&rdquo; Each booklet was, naturally, printed on Westvaco paper stock; like the lavish paper-company samples produced today, this series was meant to raise the profile of the manufacturer and encourage designers to think of Westvaco when specifying paper for their printing jobs. But these were quite modest productions: little saddlestitched booklets of about 30 pages, measuring 5-1/4 inches by 9, usually printed in two colors (the first one uses three colors throughout; the later ones are two-color, although the second color may change from sheet to sheet, with all three colors used together on the covers). The first <cite>A Typographic Quest</cite> was published in 1964; the sixth (and, as far as I know, final) came out in 1968, the year Carl Dair died. Since he was both writer and designer for the series, each of the booklets emerged as a wholly crafted object, dedicated to explaining one or another aspect of using type.</p>
+      <!-- used h2 because this was the next most important heading on the page other than the title of the article -->
       <h2>Harmony &amp; Contrast</h2>
+      <!-- more paragraphs -->
       <p>The heart of Carl Dair&rsquo;s teaching &mdash; the thing that I keep pointing people to, and the most valuable thing I myself learned from his work &mdash; is the subject of <cite>A Typographic Quest</cite> No. 5: &ldquo;Typographic Contrast.&rdquo; In a virtuoso performance, Dair shows exactly how designers use different kinds of visual contrast to make design work and meaning pop out &mdash; clearly and unambiguously, and with flair. To make his point, he compares typography to music.</p>
       <p>Graphic form and musical form have a common denominator: rhythm and emphasis, harmony and contrast. &ldquo;Harmony and contrast,&rdquo; says Dair, &ldquo;are fundamental to both, and the discovery of these basic principles and their application to the design of printed matter is the object of this volume of <cite>A Typographic Quest</cite>&rdquo;</p>
+      <!-- this felt like the same level of importance as the other h2 element so I used it again -->
       <h2>Seven Kinds of Contrast</h2>
       <p>Dair first explains the &ldquo;elements of harmony&rdquo; (a consistent relationship between the black strokes of the letters on a page and the space around them; and any rules, frames, or decorations being similar in style to the type), then goes on to show seven different kinds of contrast. He emphasizes that in any kind of differentiation, it&rsquo;s important to make the contrast obvious &mdash; not just a slight change, an almost imperceptible variation, but a really big, obvious difference between the contrasting elements.</p>
+      <!-- list looked like it should be a list to me and I made it an ordered list because we are talking about the 7 types of contrast -->
       <ol>
+        <!-- list items indented one level because they are inside the ordered list. The li elements are all siblings and children of the ol element. The ol element is the parent of the li elements. -->
         <li>Contrast of Size</li>
         <li>Contrast of Weight</li>
         <li>Contrast of Form</li>
@@ -35,23 +46,32 @@
         <li>Contrast of Direction</li>
         <li>Other Types of Contrast</li>
       </ol>
+      <!-- this heading seemed like it was a subhead of seven kinds of contrast so it got the h3 element -->
       <h3>Contrast of Size</h3>
       <p>The first and most basic contrast is size. &ldquo;A simple but dramatic contrast of size,&rdquo; says Dair, &ldquo;provides a point to which the reader&rsquo;s attention is drawn. Set in the same style of type, it maintains the exact relationship of the letter to the background. It is only a physical enlargement of the basic pattern created by the form and the weight of the type being used for the text.&rdquo; The most common use of size is in making the title or heading noticeably bigger than the text &mdash; but that&rsquo;s only a starting-point.</p>
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Contrast of Weight</h3>
       <p>The second most obvious contrast is of weight: bold type stands out in the middle of lighter type of the same style. As Dair points out, &ldquo;Not only types of varying weight, but other typographic material such as rules, spots, squares, etc., can be called into service to provide a heavy area for a powerful point of visual attraction or emphasis.&rdquo;</p>
+      <!-- I added a rule above and below this next paragraph because the paragraph felt a little like an aside and not part of the total running text. not necessary just a little design element -->
       <hr class="top">
+      <!-- this is still a paragraph but I gave it a class so I could style it a little differently than the rest of the paragraphs -->
       <p class="note">The next two kinds of contrast are the contrast of form and the contrast of structure. It&rsquo;s not entirely obvious where to draw a line between these two, since they both have to do with the shapes of the letters.</p>
       <hr class="bottom">
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Contrast of Form</h3>
       <p>By &ldquo;form,&rdquo; Dair means the distinction between a capital letter and its lowercase equivalent, or a roman letter and its italic variant. He includes condensed and expanded versions under &ldquo;form,&rdquo; and he even allows as how &ldquo;there are some script types which harmonize with standard types, such as the Bank Script and Bodoni on the opposite page, and can be used for dramatic change of form.&rdquo; (He warns, parenthetically, against using scripts and italics together, since they are both versions of handwritten letters; they&rsquo;re more likely to conflict than to contrast.)</p>
       <h3>Contrast of Structure</h3>
       <p>By &ldquo;structure,&rdquo; Dair means the different letterforms of different kinds of typefaces &mdash; a monoline sans serif vs. a high-contrast modern, for instance, or an italic vs. a blackletter. &ldquo;The use of contrast of structure may be compared to an orator who changes his voice not to increase or decrease the volume, but to change the very quality of his voice to suit his words.&rdquo;</p>
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Contrast of Texture</h3>
       <p>Put all these things together, and apply them to a block of text on a page, and you come to the contrast of texture: the way the lines of type look as a mass, which depends partly on the letterforms themselves and partly on how they&rsquo;re arranged. &ldquo;Like threads in cloth,&rdquo; says Dair, &ldquo;types form the fabric of our daily communication.&rdquo;</p>
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Contrast of Color</h3>
       <p>Dair&rsquo;s sixth contrast is color &mdash; and he warns that a second color is usually less emphatic than plain black on white (or white on black), so it&rsquo;s important to give careful thought to which element needs to be emphasized, and to pay attention to the tonal values of the colors used.</p>
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Contrast of Direction</h3>
       <p>The last of Dair&rsquo;s seven kinds of contrast is the contrast of direction: the opposition between vertical and horizontal, and the angles in between. Turning one word on its side can have a dramatic effect on a layout. But Dair points out that text blocks also have their vertical or horizontal aspects, and mixing wide blocks of long lines with tall columns of short lines can also produce a contrast.</p>
+      <!-- same level heading as the first one so it is an h3 element -->
       <h3>Other Types of Contrast</h3>
       <p>There are other kinds of contrast, less clearly dependent on the type itself. Dair mentions &ldquo;contrast by isolation,&rdquo; i.e., putting a word or phrase in an isolated position away from the other elements on the page, to make it stand out. (I think of this as a contrast of position.) And he suggests other kinds of non-typographic contrast, such as mixing paper stocks, embossing, and using contrasting matte or gloss inks. He also points out that illustrations, especially line art, may be in harmony with the type on the same page or may contrast with it completely.</p>
       <p>Finally, Dair takes time to say a little about rhythm (&ldquo;in typography, it consists of intervals of space&rdquo;) and about the power of &ldquo;interrupted rhythm&rdquo; (&ldquo;the impact derives not from the fact that the unexpected happens, but rather that the expected does not happen&rdquo;).</p>
