--- a/e3/index.html
+++ b/e3/index.html
@@ -10,7 +10,7 @@
   <body class="interior">
     <main class="exercise">
       <h1>Exercise 3</h1>
-      <img src="img/e3.png" alt="disorganized folder">
+      <img src="img/e3.png" alt="organized folder">
     </main>
   </body>
 </html>
