--- a/e6/index.html
+++ b/e6/index.html
@@ -2,23 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>E2</title>
+    <title>E6</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body class="interior">
     <main class="exercise">
-      <h1>Exercise 2</h1>
-      <img src="img/1.png" alt="shape layout 1">
+      <h1>Exercise 6</h1>
+      <img src="img/jungle-1.png" alt="first layout for the jungle only type">
       <hr>
-      <img src="img/2.png" alt="shape layout 2">
+      <img src="img/jungle-2.png" alt="second layout for the jungle only type">
       <hr>
-      <img src="img/3.png" alt="shape layout 3">
+      <img src="img/jungle-3.png" alt="third layout for the jungle only type">
       <hr>
-      <img src="img/4.png" alt="shape layout 4">
+      <img src="img/jungle-4.png" alt="fourth layout for the jungle with images">
       <hr>
-      <img src="img/5.png" alt="shape layour 5">
+      <img src="img/jungle-5.png" alt="fifth layout for the jungle with images">
+      <hr>
+      <img src="img/jungle-6.png" alt="sizth layout for the jungle with images">
     </main>
   </body>
 </html>
