--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="e5/index.html">E5: Wireframes</a></li>
       <li><a href="e6/index.html">E6: Type on Screen I</a></li>
       <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
+      <li><a href="p1/index.html">Project 1</a></li>
     </ul>
   </body>
 </html>
