--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="e6/index.html">E6: Type on Screen I</a></li>
       <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
       <li><a href="p1/index.html">Project 1</a></li>
+      <li><a href="p1-mockups/index.html">Project 1 Mockups</a></li>
     </ul>
   </body>
 </html>
