--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Example Work</h1>
-    <ul>
-      <li><a href="e1/index.html">E1: 20 Questions</a></li>
-      <li><a href="e2/index.html">E2: Make the Grid</a></li>
-      <li><a href="e3/index.html">E3: Organization and Naming</a></li>
-      <li><a href="e4/index.html">E4: Site Map</a></li>
-      <li><a href="e5/index.html">E5: Wireframes</a></li>
-      <li><a href="e6/index.html">E6: Type on Screen I</a></li>
-      <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
-      <li><a href="p1/index.html">Project 1</a></li>
-      <li><a href="p1-mockups/index.html">Project 1 Mockups</a></li>
-    </ul>
+    <header>
+      <h1>Example Work</h1>
+    </header>
+    <main>
+      <div class="col">
+        <h2>Exercises</h2>
+        <ul>
+          <li><a href="e1/index.html">E1: 20 Questions</a></li>
+          <li><a href="e2/index.html">E2: Make the Grid</a></li>
+          <li><a href="e3/index.html">E3: Organization and Naming</a></li>
+          <li><a href="e4/index.html">E4: Site Map</a></li>
+          <li><a href="e5/index.html">E5: Wireframes</a></li>
+          <li><a href="e6/index.html">E6: Type on Screen I</a></li>
+          <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
+          <li>E8: Patterns</li>
+          <li>E9: Layouts</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h2>Project</h2>
+        <ul>
+          <li><a href="p1/index.html">Project 1</a></li>
+          <li><a href="p1-mockups/index.html">Project 1.3 Mockups</a></li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
