--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="e5/index.html">E5: Wireframes</a></li>
           <li><a href="e6/index.html">E6: Type on Screen I</a></li>
           <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
-          <li>E8: Patterns</li>
-          <li>E9: Layouts</li>
+          <li><a href="e8/index.html">E8: Patterns</a></li>
+          <li><a href="e9/index.html">E9: Layouts</a></li>
         </ul>
       </div>
       <div class="col">
