--- a/e8/index.html
+++ b/e8/index.html
@@ -1,1 +1,26 @@
-list of links to pattern
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Patterns</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
+    <link rel="stylesheet" href="../css/main.css">
+  </head>
+  <body>
+    <header>
+      <h1>Patterns</h1>
+    </header>
+    <main>
+      <div class="col">
+        <ul>
+          <li><a href="pattern1/index.html">Pattern 1</a></li>
+          <li>Pattern 2</li>
+          <li>Pattern 3</li>
+          <li>Pattern 4</li>
+          <li>Pattern 5</li>
+        </ul>
+      </div>
+    </main>
+  </body>
+</html>
