--- a/e9/index.html
+++ b/e9/index.html
@@ -1,1 +1,26 @@
-links to all layouts
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Layouts</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/erc2tlk.css">
+    <link rel="stylesheet" href="../css/main.css">
+  </head>
+  <body>
+    <header>
+      <h1>Layouts</h1>
+    </header>
+    <main>
+      <div class="col">
+        <ul>
+          <li><a href="layout1/index.html">Checkerboard</a></li>
+          <li>3 Column</li>
+          <li>Blog</li>
+          <li>Tennis Court</li>
+          <li>California Case</li>
+        </ul>
+      </div>
+    </main>
+  </body>
+</html>
