--- a/e9/index.html
+++ b/e9/index.html
@@ -14,11 +14,12 @@
     <main>
       <div class="col">
         <ul>
-          <li><a href="layout1/index.html">Checkerboard</a></li>
-          <li>3 Column</li>
-          <li>Blog</li>
-          <li>Tennis Court</li>
-          <li>California Case</li>
+          <li><a href="checker/index.html">Checkerboard</a></li>
+          <li><a href="column/index.html">3 Column</a></li>
+          <li><a href="blog/index.html">Blog</a></li>
+          <li><a href="tennis-borders/index.html">Tennis Court (using borders)</a></li>
+          <li><a href="tennis-margins/index.html">Tennis Court (using margins)</a></li>
+          <li><a href="case/index.html">California Case</a></li>
         </ul>
       </div>
     </main>
