--- a/e9/tennis-borders/index.html
+++ b/e9/tennis-borders/index.html
@@ -16,13 +16,13 @@
       </div>
       <div class="side"></div>
       <!-- bottom half -->
-      <!-- <div class="side"></div>
+      <div class="side"></div>
       <div class="center">
         <div class="middle"></div>
         <div class="middle"></div>
         <div class="back"></div>
       </div>
-      <div class="side"></div> -->
+      <div class="side"></div>
     </main>
   </body>
 </html>
