--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <li><a href="e7/index.html">E7: seven-principles.txt</a></li>
           <li><a href="e8/index.html">E8: Patterns</a></li>
           <li><a href="e9/index.html">E9: Layouts</a></li>
+          <li>E10: Visualizing Responsiveness</li>
+          <li>E11: Type on Screen II</li>
+          <li><a href="e12/index.html">E12: CSS Drawing</a></li>
+          <li>E13: Programmer and Computer</li>
         </ul>
       </div>
       <div class="col">
