--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
           <li><a href="p1/index.html">Project 1</a></li>
           <li><a href="p1-mockups/index.html">Project 1.3 Mockups</a></li>
         </ul>
+        <h2>Demos</h2>
+        <ul>
+          <li><a href="float-demo/index.html">Float Demo</a></li>
+          <li><a href="float-test/index.html">Float Test</a></li>
+          <li><a href="positioning-demo/index.html">Positioning Demo</a></li>
+          <li><a href="jquery-interaction/index.html">jQuery Interaction</a></li>
+          <li><a href="jquery-number/index.html">jQuery Guess a Number</a></li>
+          <li><a href="jquery-color/index.html">jQuery Guess a Color</a></li>
+          <li><a href="jquery-plugin/index.html">jQuery Plugin</a></li>
+        </ul>
       </div>
     </main>
   </body>
