--- a/jquery-plugin/index.html
+++ b/jquery-plugin/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>jQuery Plugin</title>
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <!-- Add the new slick-theme.css if you want the default styling -->
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
-    <script src="js/main.js"></script>
   </head>
   <body>
     <main>
@@ -19,27 +19,12 @@
           <img src="img/puffins-3.jpg" alt="puffins">
         </div>
         <div>
-          <img src="img/puffins-4.jpg" alt="puffins">
-        </div>
-        <div>
-          <img src="img/puffins-6.jpg" alt="puffins">
-        </div>
-        <div>
           <img src="img/puffins-7.jpg" alt="puffins">
-        </div>
-        <div>
-          <img src="img/puffins-8.jpg" alt="puffins">
-        </div>
-        <div>
-          <img src="img/puffins-9.jpg" alt="puffins">
-        </div>
-        <div>
-          <img src="img/puffins-10.jpg" alt="puffins">
         </div>
       </div>
       <p>Gallery built using <a href="https://kenwheeler.github.io/slick/">Slick</a></p>
     </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
